--- a/src/Storefront/Resources/src/style/component/_product-box.scss
+++ b/src/Storefront/Resources/src/style/component/_product-box.scss
@@ -16,6 +16,8 @@
 
 .product-image-link {
     display: block;
+    flex: 1;
+    text-align: center;
 }
 
 .product-name {
